@@ -20,26 +20,32 @@
         <module>noarkexchange-p360</module>
         <module>noarkexchange-ephorte</module>
         <module>altinnexchange</module>
-        <module>adresseregister-web</module>
-        <module>adresseregister-domain</module>
-        <module>adresseregister-client</module>
         <module>dokumentpakking</module>
         <module>integrasjonspunkt</module>
         <module>domain</module>
-        <module>sbd-reader</module>
         <module>transport</module>
-        <module>transport-oxalis</module>
         <module>transport-file</module>
-        <module>virksomhetssertifikatvalidator</module>
         <module>transport-altinn</module>
         <module>altinn-batch-receive</module>
         <module>altinnmock</module>
         <module>altinn-client</module>
+        <module>virksert-demoscope</module>
     </modules>
     <build>
         <pluginManagement>
 
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12</version>
+                    <configuration>
+                        <junitArtifactName>junit:junit</junitArtifactName>
+                        <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+                            -Dfile.encoding=UTF-8</argLine>
+                    </configuration>
+                </plugin>
+
                 <plugin>
                     <groupId>com.heroku.sdk</groupId>
                     <artifactId>heroku-maven-plugin</artifactId>
@@ -67,6 +73,8 @@
                     <configuration>
                         <source>1.7</source>
                         <target>1.7</target>
+                        <verbose>true</verbose>
+                        <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
 
